# trendwatcher

./: .env.example  .gitignore  CLAUDE.md  FULL_PIPELINE_TEST.md  GOOGLE_TRENDS_FIX.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  REDDIT_SETUP.md  SLACK_INTEGRATION_COMPLETE.md  SLACK_SETUP.md  TEST_RESULTS.md  pyproject.toml  requirements.txt
data/catalog/: .gitkeep  products.example.json
data/history/: trends_2026_w08.jsonl
docs/: SETUP.md
reports/: week_latest.md
src/trendwatcher/: cli.py
src/trendwatcher/analyze/: __init__.py  llm_analyzer.py  prompts.py
src/trendwatcher/config/: scheduler.yaml  sources.yaml
src/trendwatcher/extract/: entity_extractor.py  extract_trends.py
src/trendwatcher/ingest/: fetch.py  food_blogs.py  google_trends.py  google_trends_v2.py  reddit.py
src/trendwatcher/ingest/sources/menu/: __init__.py  base.py  resy.py  thefork.py
src/trendwatcher/match/: __init__.py  catalog.py  matcher.py
src/trendwatcher/report/: __init__.py  email_reporter.py  formatters.py  markdown_reporter.py  slack_reporter.py
src/trendwatcher/scheduler/: __init__.py  daemon.py  jobs.py
src/trendwatcher/score/: __init__.py  trend_scorer.py
src/trendwatcher/score/components/: __init__.py  breadth.py  diversity.py  recency.py  specificity.py  velocity.py
src/trendwatcher/store/: __init__.py  base.py  jsonl_store.py
tasks/: lessons.md  todo.md
